--- a/Banality_of_Parasitism.Rmd
+++ b/Banality_of_Parasitism.Rmd
@@ -1,8 +1,8 @@
 ---
-title: "The Commonness and Banality of Parasitism"
+title: "The Banality, but importance of parasitism"
 author: "Jesse Brunner"
 date: "`r Sys.Date()`"
-output: tint::tintPdf
+output: tint::tintHtml
 latexfonts:
   - package: newtxmath
     options: 
@@ -32,23 +32,25 @@ library(simecol) # for running model
 theme_set(theme_minimal())
 ```
 
-We often treat parasites as if they are these rare things that occasionally crop up and cause problems. And understandably so! Being sick is terrible. Epidemics bring illness and even death to many and pain to most. If only we could just get rid of these few nuisances, why, wouldn't the world be a better places? What I want to convince you of is that neither of these perspectives are right. Parasites are far from rare, and they usually do not cause the plagues we associate with them. Indeed, most of the time we pay them little thought. In other words, we should not think about parasitism as some special case where _something_ went wrong, but as the normal state of the world; common and even banal!
+We often treat parasites as if they are these rare things that occasionally crop up and cause problems. And understandably so! Being sick is terrible. Epidemics bring illness and even death to many and pain and suffering to most. If only we could just get rid of these few nuisance species!  Wouldn't the world be a better places? 
+
+What I want to convince you of is that neither of these perspectives are right. Parasites are far from rare, but the plague-causing pathogens are. Indeed, parasites are so common and usually cause so little harm that most of the time we do not even notice them. In other words, we should not think about parasitism as some special case where _something_ went wrong, but as the normal state of the world; common, even banal!
 
 # Parasites are common!
 
-Parasitism is the most successful strategy or means of making a living. More common than photosynthesis, herbivory, or carnivory; perhaps more common than all of them combined!  That is because every single species on Earth has at least one species parasitizing it. From what I can tell we have never looked carefully at a species and _not_ found it being parasitized at least occasionally. Even parasites have parasites!^[These are often called hyper-parasites. There can even be hyper-hyper-parasites!] And many of these parasites specialize on just one or a few host species^[The question of why so many parasites are specialists while others are generalists is a very deep one, and fodder for a century of evolutionary biologists.]. The numbers work out such that nearly half of all species on earth are thought to be parasites. .
+Parasitism is the most successful strategy or means of making a living. It is more common than photosynthesis, herbivory, or carnivory, perhaps more common than all of them combined!  That is because every single species on Earth has at least one species parasitizing it. From what I can tell we have never looked carefully at a species and _not_ found it being parasitized at least occasionally. Even parasites have parasites!^[These are sometimes called hyper-parasites. There can even be hyper-hyper-parasites!] And many of these parasites specialize on just one or a few host species^[The question of why so many parasites are specialists while others are generalists is a very deep one, and fodder for a century of evolutionary biologists.]. The numbers work out such that nearly half of all species on earth are thought to be parasites. 
 
-Think about you. You have _huge_ numbers of things infecting you, even in this highly sanitized, carefully controlled world! You are host to a myriad of viruses, masses of bacteria, the occasional fungus (athlete's foot, yeast infections) or helminth (tapeworms, pinworm, roundworm), and perhaps lice or ticks on occasion or the rare apicomplexan (_Babesia_, _Toxoplasma_). And that's if you've been lucky and fairly healthy! The fact that we are infected by so _few_ parasites speaks to centuries of improved sanitation, food safety, and, to a small extent, medicine.   
+Think about yourself. You have _huge_ numbers of things infecting you, even in this highly sanitized, carefully controlled world! You are host to a myriad of viruses, masses of bacteria, the occasional fungus (athlete's foot, yeast infections) or helminth (tapeworms, pinworm, roundworm), and perhaps lice or ticks on occasion, or the rare apicomplexan (_Babesia_, _Toxoplasma_). And that's if you've been lucky and fairly healthy! The fact that we are infected by so _few_ parasites speaks to centuries of improved sanitation, food safety, and, to a smaller extent, medicine.   
 
-Another way to think about it is that virtually every taxon has some members that we would think of as parasites. Sure, the microparasites like viruses^[A special case. We know of non-parasitic viruses.], bacteria, and fungi seem obvious, but we can find representatives in less obvious places, too! For instance, huge numbers of wasps are parasites, as are flies and fleas and bees. Plants like mistletoe and [Indian pipe](https://en.wikipedia.org/wiki/Myco-heterotrophy) are parasites of trees and mycorrhizal fungi, respectively. Cowbirds and cuckoos are brood parasites, laying their camouflaged eggs in the nest of some other species, who then take care of them like their own, even after these young parasites kick out of the nest their adopted siblings. One of my favorite examples is _[Sacculina](https://en.wikipedia.org/wiki/Sacculina)_, a genus of _barnacles_ (!) that parasitize and castrate crabs. Their larvae find a chink in the armor of a crab (e.g., at a joint) and then inject themselves into the crab, grow a large sac of developing eggs on the crab's thorax, where it's own eggs would be, and manipulates the host crab into taking care of this parasites eggs as if they were her own! What's more, if the barnacle gets onto a male crab it will feminize it and convince it that it is a pregnant female, too!  There are too many examples to do justice! 
+Another way to think about it is that virtually every taxon has some members that we would think of as parasites. Sure, the microparasites like viruses^[A special case. We know of no non-parasitic viruses.], bacteria, and fungi seem obvious, but we can find representatives in less obvious places, too! For instance, huge numbers of wasps are parasites, as are flies and fleas and bees. Plants like mistletoe and [Indian pipe](https://en.wikipedia.org/wiki/Myco-heterotrophy) are parasites of trees and mycorrhizal fungi, respectively. Cowbirds and cuckoos are brood parasites, laying their camouflaged eggs in the nest of some other species, who then take care of them like their own, even after these young parasites kick out of the nest their adopted siblings. One of my favorite examples is _[Sacculina](https://en.wikipedia.org/wiki/Sacculina)_, a genus of _barnacles_ (!) that parasitize and castrate crabs. Their larvae find a chink in the armor of a crab (e.g., at a joint) and then inject themselves into the crab, grow a large sac of developing eggs on the crab's thorax, where it's own eggs would be, and manipulates the host crab into taking care of this parasites eggs as if they were her own! What's more, if the barnacle gets onto a male crab it will feminize it and convince it that it is a pregnant female, too!  There are too many examples to do justice to the diversity of parasites! 
 
 # Parasites are not some minor player to be ignored
 
-Parasites can have a major role in the world around us. Setting aside the fact that this one novel coronavirus that popped up recently has completely remade our world, there are many examples throughout history where parasites have changed history, ecosystems, or both (e.g., the Black Plague, Rinderpest, Smallpox). But parasites are also important to the larger world more broadly and more often. Let us consider two marine examples that illustrate the commonness and potential importance of parasites.
+Parasites can have a major role in the world around us. Setting aside the fact that this one novel coronavirus that popped up recently has completely remade our world, there are many examples throughout history where parasites have changed history, ecosystems, or both (e.g., the Black Plague, Rinderpest, Smallpox). But parasites are also important to the larger world more broadly and often. Let us consider two marine examples that illustrate the commonness and potential importance of parasites.
 
-First, consider viruses in the oceans. They make up a surprising amount of biomass, the biotic stuff or material, in the ocean.  One estimate^[[Suttle, C. 2007. Marine viruses — major players in the global ecosystem. Nat Rev Microbiol 5, 801–812](https://www.nature.com/articles/nrmicro1750)] suggested that viruses comprise 94% of all nucleic acid-containing particles, that is 19 in 20  things floating in the water with a genome^[Multicellular organisms are, by comparison, too rare to bother counting, though their biomass is.]. Even though any given virus particle weighs a negligible amount, combined they still count for some 5% of prokaryotic biomass. The amount of carbon^[Carbon both represents an important part of an ecosystem and plays an important role in energy flow, hence why an ecologist might report such a focused comparison.] in these viruses is estimated to be equivalent to the carbon in 75,000,000 blue whales^[[Suttle, C. 2005. Viruses in the sea. Nature 437, 356–361](https://www.nature.com/articles/nature04160)]!
+First, consider viruses in the oceans. They make up a surprisingly large amount of biomass in the ocean.  One estimate^[[Suttle, C. 2007. Marine viruses — major players in the global ecosystem. Nat Rev Microbiol 5, 801–812](https://www.nature.com/articles/nrmicro1750)] suggested that viruses comprise 94% of all nucleic acid-containing particles, that is 19 in 20  things floating in the water with a genome^[Multicellular organisms are, by comparison, too rare to bother counting, though their biomass is.]. Even though any given virus particle weighs a negligible amount, combined they still count for some 5% of prokaryotic biomass. The amount of carbon^[Carbon both represents an important part of an ecosystem and plays an important role in energy flow, hence why an ecologist might report such a focused comparison.] in these viruses is estimated to be equivalent to that in 75,000,000 blue whales^[[Suttle, C. 2005. Viruses in the sea. Nature 437, 356–361](https://www.nature.com/articles/nature04160)]!
 
-What do those viruses do? Well, they replicate and in the process most lyse or break open their host cells. Viruses of phytoplankton thus kill and break open these phytoplankton---estimates are on the order of 10--40% of prokaryotic cells per day!--- releasing all of their hosts' nutrients into the waters to be taken up by other phytoplankton. This is important when considering the alternative; plankton that die intact drop out of the water column, taking their nutrients with them. No nutrients, no growth. No growth, no converting atmospheric CO~2~ into biomass. Thus, viruses play an important role in the worlds oceans, facilitating phytoplankton growth and even increasing rates of carbon absorption into deep oceans on a scale relevant to geochemical cycles!  
+What do those bazillions of viruses do? Well, they replicate and in the process most lyse or break open their host cells. Viruses of phytoplankton thus kill and break open their phytoplankton hosts---estimates are on the order of 10--40% of prokaryotic cells per day!---releasing all of their hosts' nutrients into the waters to be taken up by other phytoplankton. This is important when considering the alternative; plankton that die intact drop out of the water column, taking their nutrients with them. No nutrients, no growth. No growth, no converting atmospheric CO~2~ into biomass. Thus, viruses play an important role in the worlds oceans, facilitating phytoplankton growth and even increasing rates of carbon absorption into deep oceans on a scale relevant to geochemical cycles!  
 
 
 ```{r, fig.margin=TRUE, fig.cap="The amount of biomass in different sorts of parasites in three estuaries. The bird icon marks the mean winter bird mass density across the three estuaries (4.1 kg ha$^{-1}$)."}
@@ -57,26 +59,20 @@ knitr::include_graphics("Estuary_Parasite_Biomass.png", dpi=400)
 ```
 
 
-Second, consider the macroparasites found in all of the birds and crabs and other animals found in marine estuaries. One study of three estuaries found that the biomass of tropically-transmitted and castrating parasites was equivalent to all of the wading birds you could see^[[Kuris et al. 2008. Ecosystem energetic implications of parasite and free-living biomass in three estuaries. Nature 454:515-518.](https://www.researchgate.net/publication/51424455_Ecosystem_energetic_implications_of_parasite_and_free-living_biomass_in_three_estuaries)]! Imagine that! In and around all of those wading birds that people come to see is an equal mass of worms and so on, hidden from sight and, for most people, thought.  
+Second, consider the parasites in the birds (and crabs and other animals) found in marine estuaries. One study of three estuaries found that the biomass of just tropically-transmitted^[That is, transmitted by the infected host being eaten.] and castrating parasites were each roughly equivalent to the biomass of all of the wading birds^[[Kuris et al. 2008. Ecosystem energetic implications of parasite and free-living biomass in three estuaries. Nature 454:515-518.](https://www.researchgate.net/publication/51424455_Ecosystem_energetic_implications_of_parasite_and_free-living_biomass_in_three_estuaries)]! Imagine that! In and around all of those wading birds that people come to see is an equal mass of worms and so on, hidden from sight, and for most people's thoughts.  
 
-These macroparasites are also important in the energy flow through ecosystems, not simply by releasing nutrients into the water, but through their trophic interactions. These parasites eat things---both literally and metaphorically---and are then eaten, moving energy  (ATP, sugars, long-chain carbon molecules more broadly) and nutrients along with them. Parasites, especially those with complex life histories, can add connections in food webs, providing different routes through which energy and nutrients can flow^[[Dunne et al. 2013. Parasites affect food web structure primarily through increased diversity and complexity. PLoS Biol 11:e1001579.](https://journals.plos.org/plosbiology/article?id=10.1371/journal.pbio.1001579)], all of which can stabilize food webs.
+These macroparasites are also important in the energy flow through ecosystems, not simply by releasing nutrients into the water, but through their trophic interactions. These parasites eat things---both literally and metaphorically---and are then eaten, moving energy  (ATP, sugars, long-chain carbon molecules more broadly) and nutrients along with them. Parasites, especially those with complex life histories, add connections in food webs, providing different routes through which energy and nutrients flow^[[Dunne et al. 2013. Parasites affect food web structure primarily through increased diversity and complexity. PLoS Biol 11:e1001579.](https://journals.plos.org/plosbiology/article?id=10.1371/journal.pbio.1001579)], all of which can stabilize food webs.
 
-While most parasite species do not play a major role in ecosystems, let alone in the population dynamics of their hosts, some do. But more importantly, parasites _collectively_ are common, enormously abundant, and usually tightly integrated into the ecology of their hosts. A world without parasites would be a very different place^[[Wood & Johnson. 2015. A world without parasites: exploring the hidden ecology of infection. Front Ecol Environ 13:425-434.](https://www.researchgate.net/publication/282428544_A_world_without_parasites_Exploring_the_hidden_ecology_of_infection)]!
+Sure, most parasite species do not play a major role in ecosystems, let alone have major impacts on the population dynamics of their hosts. But parasites _collectively_ are so common, so enormously abundant, and (usually) so tightly integrated into the ecology of their hosts that they matter tremendously! A world without parasites would be a very different place^[[Wood & Johnson. 2015. A world without parasites: exploring the hidden ecology of infection. Front Ecol Environ 13:425-434.](https://www.researchgate.net/publication/282428544_A_world_without_parasites_Exploring_the_hidden_ecology_of_infection)]!
 
 # But most parasites have fairly minor impacts on their hosts
 
-Let us return to the wealth of parasites making their living on and in us. There are...lots of them. More than I can count anyway. But, importantly, most of them do very little harm to us, at least most of the time. Consider [_Staphylococcus aureus_](https://en.wikipedia.org/wiki/Staphylococcus_aureus), a bacteria commonly known for horrendous skin infections, blood and bone infections, and food poisoning collectively linked to tens of thousands of deaths a year in the U.S.A. It is much more frequently a normal part of the skin and even gut microbiota. Why does this normal, largely benign commensal occasionally kill people? The short answer is that context matters. Yes, there are more virulent types that have one way or another picked up the genetic capacity to secrete enzymes, toxins, and more that can turn them from potentially harmful to outright dangerous^[Bacteria are famously, ah...permissive of sharing mobile genetic elements, recombination, and so on.  Many are the experiments where the pathogenic bacteria fails to cause any damage because it somehow lost its plasmid with virulence factors.]. But more broadly, staph tends to be an opportunistic infection. It cannot pierce your skin or mucosal membranes itself, most of the time. Indeed, it is quite fine making a living on your surfaces. But given the opportunity it may well enter a wound or scrape and start to grow; it's a nice warm, wet, nutrient rich environment, after all! If the host's immune system is not able to control its growth, well that's where the problems lay. 
+Let us return to the wealth of parasites making their living on and in us humans. There are...lots of them. More than I can count anyway. But, importantly, most of them do very little harm to us, at least most of the time. Most of the time, for instance, a cold won't kill you are affect your reproductive output. You have probably survived the occasional bout of food poisoning more or less unscathed. Indeed, measuring the fitness effects of many parasites is very, very tricky because the effects are so subtle. 
 
-## Parasitism on the spectrum
-This example highlights two important points. First, the effects that parasites have on their hosts (and vice versa) should be considered along a spectrum, from benign (or even helpful!) to harmful. Focusing on the effect of the symbiont^[From Latin from the Greek sumbiōsis ‘a living together’, from , from sumbios ‘companion’. Symbiosis means two different organisms living in close physical proximity. While the relationship is often thought of as mutually advantageous, it need not be the case.] on the host^[We focus on the host, because if the symbiont is not getting some advantage by being in or on the host, why is it there? In truth, however, there are cases where the relationship is neutral for both parties, which we call an amensalism or neutralism. But now we're splitting hairs.], we would call one that benefited the host a mutualism (both are doing well), one that is neutral for the host an commensalism, and one that is detrimental for the host a parasitism. What do we mean by beneficial or detrimental? Well, technically we would focus on the net change in the host's fitness, in the evolutionary sense of the word. So a loss of reproduction is just as detrimental as a loss of life! A reduction in growth or an increase in predation risk would also be detrimental. Moreover, from this perspective the annoying cold or athlete's foot that have no real fitness costs might be better thought of a commensalism, or nearly so.
+The British colonial governments, bless their misguided hearts, conducted a great deal of research trying to sort out the impacts of (macro)parasite infections on their laborers and other subjects and did find costs...to production! People with higher worm burdens, for instance, harvested tea more slowly or had to take more breaks in garment factories. But the impacts often only became apparent when considering people with quite heavy burdens. 
 
-Indeed, in this view, most parasites are commensals, or at least nearer the center than the parasitic extreme, most of the time. Trust me, you are far from aware of the countless viruses you are constantly playing reluctant host to and, indeed, fighting off. Measuring their impact on host fitness would be a difficult endeavor. The British colonial governments, bless their misguided hearts, conducted a great deal of research trying to sort out the impacts of (macro)parasite infections on their laborers and other subjects and found costs (to production!), but they were often quite subtle. What is the point? Well, it is important to realize in a bone-deep way that it is difficult if not impossible to have clear cut-offs between these categorical terms we use, even for parasites. And, again, parasitism is incredibly commonplace and the vast majority of the time, pretty invisible.
+Indeed, much of the time the worst outcomes occur only in those in the worst of shape already or those with the greatest parasite burden. Tapeworms, for instance, cause little damage to many if not most hosts^[They were once sold for weight loss!], but they are very problematic in undernourished hosts. _Very_ light infections with hookworms (e.g., _Necator americanus_) can cause little if any notable pathology (and some think infections with them and similar helminths prevent autoimmune disorders), but at higher doses they cause severe anemia or worse^[Another clear case of a dose-response!]. 
 
-## Symbioses are fluid
-The second point from our example of _S. aureus_ is that symbiotic associations can be quite fluid depending on context. These bacteria happily make a living on the skin of many people, primarily digesting dead skin and whatever else is available. If it gets into a cut in your skin and continues to digest whatever is available, it hasn't changed, but the nature of the relationships has; you now have a pus-filled wound^[The pus is mostly white blood cells attacking the bacteria.]. Similarly, _Candidia albicans_ is a normally commensal yeast found in the gut flora of roughly half of human adults. It is also an important cause of vaginal yeast infections and thrush, but can even cause systemic infections. In what populations is most commonly observed causing problematic infections? The very young, the very old, and the otherwise immunocompromised (e.g., those undergoing chemotherapy, AIDS patients). Sure, these are opportunistic parasites, but the same context dependence is also common in obligate parasites.
+What is the point? I want you to realize, in a bone-deep way, that most parasites, most of the time, are far from from the lethal monsters we often imagine^[Parasites need love, too!].
 
-Tapeworms cause little damage to many if not most hosts^[They were even [sold for weight loss](https://en.wikipedia.org/wiki/Cestoda#Interactions_with_humans)!], but they are very problematic for undernourished hosts. _Very_ light infections with hookworms (e.g., _Necator americanus_) can cause little if any notable pathology (and some think they, and similar helminth infections, prevent autoimmune disorders), but at higher doses they cause severe anemia and worse. And of course the severity of many respiratory virus infections often depends on the extent of the host's immune response (e.g., the cytokine storm that causes such severe pathology in some influenza cases). 
-
-Many things push a relatively benign symbiosis towards a more parasitic interaction (or vice versa). Conditions like temperature are very important for infections in ectotherms. Nutrient and energetic status of the host is often important^[One cool example comes from mycorrhizal fungi who typically provide hard-to-get nutrients, such as phosphorus, to their hosts plants, who in return provide sugars. What happens if you fertilize the plant with phosphorus? It stops giving the myrorrhizae sugars and may even kick them out. What were once key business partners suddenly became free-loading parasites! (See, for instance, [Kiers et al. 2011. Reciprocal rewards stabilize cooperation in the mycorrhizal symbiosis. Science 333:880-882.](https://www.researchgate.net/publication/51566071_Reciprocal_Rewards_Stabilize_Cooperation_in_the_Mycorrhizal_Symbiosis))]. Dose and immune status (think immunocompromised vs. tolerant hosts) and the presence of other organisms can all change the nature of a symbiotic relationship. We will discuss some of these factors, but honestly, the range of important factors span the whole of immunology and physiology and nutrition and ecology. Suffice to say, what may clearly be a parasite in one context may be a commensal or even a mutualist in another. 
-
-`r newthought('Let me close')`  by returning to the notion that parasites are rare, but harmful organisms that we (thankfully) rarely deal with. I hope I have convinced you that while we can certainly find some impressively harmful (and [odd](https://en.wikipedia.org/wiki/Cymothoa_exigua)!) parasites, these comprise a very small portion of parasite diversity. Parasites are all around and in us most all the time. They usually cause little obvious harm to us or the animals we care about, at least most of the time. This might be attributed in some degree to our amazing immune systems, capable of wrangling innumerable intruders without us even noticing, and to a degree to the fact that parasites usually have little interest in causing us harm. Indeed, their more important adversaries are often their co-infecting symbiotic neighbors or the harsh environment away from the host. In the end, parasitism is simply a very common way of making a living in the world. It can be hugely important for hosts and populations and even ecosystems, but more often, it is quite banal. 
+`r newthought('I hope I have')` convinced you that while we can certainly find some impressively harmful (and [odd](https://en.wikipedia.org/wiki/Cymothoa_exigua)!) parasites, these species comprise a very small portion of parasite diversity. Parasites are all around and in us most all the time. They usually cause little obvious harm to us or the animals we care about, at least most of the time. This might be attributed in some degree to our amazing immune systems, capable of wrangling innumerable intruders without us even noticing, and to a degree to the fact that parasites usually have little interest in causing us harm. Indeed, their more important adversaries are often their co-infecting symbiotic neighbors or the harsh environment away from the host. In the end, parasitism is simply a very common way of making a living in the world. It can be hugely important for hosts and populations and even ecosystems, but more often, it is quite banal. 
