--- a/WritingPrompts.Rmd
+++ b/WritingPrompts.Rmd
@@ -101,7 +101,7 @@ Usually, your point should be made in the first sentence of a paragraph, your to
 * **Neither papers nor authors PROVE OR DISPROVE anything**. Proofs are for mathematicians, not for us lowly scientists. Our conclusions are always, always tentative. Including the law of (universal) gravitation^[And just for completeness, No, Isaac Newton did not "prove" gravity exists, even setting aside the silly apple story. Of course gravity exists! The evidence of it is in and around us all the time, every day! No one doubted its existence. What Newton did was 1) write down some equations that make lovely predictions about its actions and 2) showed that these predictions worked just as well for planets as for stuff on Earth. But honestly, we still don't know what gravity is, exactly, or really even how it works. We just know its effects.]. Instead, talk about the weight of evidence for or against an assertion. 
 * **Finish your comparisons**. If you wrote, for instance, that "Gold doubloons make better bait for Leprechauns," your reader is likely screaming (silently, ineffectually), _Than what?! Gold bullion? Chocolate? Lucky charms?_ It might be obvious to you, but the reader is, thankfully, not in your head. 
 * **Be precise when possible**. Sometimes it is enough to say that most children get more candy at Halloween than Easter, but more often it is important to know how much more. One extra candy corn? Twice as much chocolate? And what's the unit of comparison anyway? Mass? Calories? How long it lasts? Be similarly precise about the logic or mode of action. Is the idea that since kids have some control over how many houses they "hit" while trick-or-treating their haul reflects the time available to them and their efficiency whereas during a typical Easter egg hunt there is a finite amount of candy that is then divided amongst the participants? Or is it that parents purchase less candy for their own kids during Easter than for the neighborhood during Halloween because they don't want to be viewed as stingy? These are obviously very different mechanisms that might lead to the same pattern. 
-* **Use connecting or comparing words to provide guidance for the reader**. If you leave it to the reader to connect the dots, we probably will not. Also, even a tiny bit of guidance can avoid the staccato of a series of short declarative sentences. For instance, how could you rewrite this? "Smith et al. (1995) found a large tentacle on the short. Victor and Vector (2001) argued it was not actually a tentacle. The isotopic signature was inconsistent with a predator's diet (Rolf et al. 1999)." Wouldn't a "however" and maybe a "moreover" or "indeed" or some such transition help guide the reader? 
+* **Use connecting or comparing words to provide guidance for the reader**. If you leave it to the reader to connect the dots, we probably will not. Also, even a tiny bit of guidance can avoid the staccato of a series of short declarative sentences. For instance, how could you rewrite this? "Smith et al. (1995) found a large tentacle on the shore. Victor and Vector (2001) argued it was not actually a tentacle. The isotopic signature was inconsistent with a predator's diet (Rolf et al. 1999)." Wouldn't a "however" and maybe a "moreover" or "indeed" or some such transition help guide the reader? 
 * **Avoid extraneous words and casual phrases that add nothing**. For instance, a sentence like, "The authors looked into the validity of Cthulhu by using submersible drones to look for it in the ocean, but came back empty handed"  you would be clearer, more direct, and a bit shorter as, "They did not find Cthulhu in 800 hours of searching with submersibles in the Atlantic."  (Honestly, I might freak out if I have to read "look at/into/for" again. I mean, I would assume they were "looking into" the topic since you're citing them. Instead, what are they doing or finding? How are they "looking" into it? And more importantly, what did they find?)
 * **Avoid weasel words**. If you find yourself trying to qualify or soften your statement, that is a good time to step back and ask yourself what it is, exactly, you are trying to say. Perhaps your subconscious use of weasel words or dread of saying something directly comes from a lack of understanding? Almost always your writing would be improved by removing these words and phrases. In any case, here are some types of weasel words from [Wikipedia](https://en.wikipedia.org/wiki/Weasel_word#Forms): 
 
